added sgx capability tool exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Haofan Zheng
+# Copyright (c) 2023 Haofan Zheng
 # Use of this source code is governed by an MIT-style
 # license that can be found in the LICENSE file or at
 # https://opensource.org/licenses/MIT.
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.14)
 
 project(DecentEnclave VERSION 0.0.1 LANGUAGES CXX)
 
-# OPTION(DECENTENCLAVE_TEST "Option to build DecentEnclave test executable." OFF)
+OPTION(DECENTENCLAVE_UTILS "Option to build DecentEnclave utilities." OFF)
 
 add_subdirectory(include)
 
@@ -31,7 +31,6 @@ add_library(DecentEnclave INTERFACE)
 
 target_include_directories(DecentEnclave INTERFACE include)
 
-# if(${DECENTENCLAVE_TEST})
-# 	enable_testing()
-# 	add_subdirectory(test)
-# endif(${DECENTENCLAVE_TEST})
+if(${DECENTENCLAVE_UTILS})
+	add_subdirectory(utils)
+endif(${DECENTENCLAVE_UTILS})
